--- a/AquinasAPI.csproj
+++ b/AquinasAPI.csproj
@@ -47,6 +47,7 @@
     </Compile>
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentUpdateEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
