--- a/AquinasAPI.csproj
+++ b/AquinasAPI.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Api\ApiRequest.cs" />
     <Compile Include="Api\AuthenticationInfo.cs" />
     <Compile Include="Api\AuthenticationState.cs" />
+    <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
